# CPP-Mastery

./: CMakeLists.txt  README.md
case-studies/: month-01.md  month-02.md  month-03.md  month-04.md
logs/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md  week-11.md  week-12.md  week-13.md  week-14.md  week-15.md  week-16.md  week-17.md
src/week01_resource_manager/: CMakeLists.txt  MoveOnlyBuffer.hpp  MoveOnlyResourceManager.hpp  ResourceManager.hpp  ScopedGuard.hpp  ScopedLogger.hpp  ScopedTimer.hpp  main.cpp
src/week02_tracked_object/: CMakeLists.txt  ComponentRegistry.hpp  EntityContainer.hpp  OwningHandle.hpp  TrackedBuffer.hpp  TrackedComponent.hpp  TrackedObject.hpp  TrackedPayload.hpp  TrackedVector.hpp  main.cpp
src/week03_scoped_transaction/: CMakeLists.txt  RollbackStack.hpp  ScopedTransaction.hpp  Transaction.hpp  TransactionGroup.hpp  UndoableComponent.hpp  UndoableEntity.hpp  UndoableRegistry.hpp  main.cpp
src/week04_slice_view/: CMakeLists.txt  ConstexprView.hpp  FieldIterator.hpp  FieldOffsetTable.hpp  FieldProjection.hpp  FieldRange.hpp  IndexedSpan.hpp  SliceView.hpp  SparseSlice.hpp  main.cpp
src/week05_function_ref/: CMakeLists.txt  DispatchToken.hpp  EventBus.hpp  EventDispatcher.hpp  EventQueue.hpp  FunctionRef.hpp  ListenerHandle.hpp  MultiCallback.hpp  VariantCallback.hpp  event_tags.hpp  main.cpp  traits.hpp
src/week06_allocator_selector/: CMakeLists.txt  FunctionPolicy.hpp  SmallAllocator.hpp  SmallFunctionRef.hpp  SmallVariantCallback.hpp  StoragePolicy.hpp  main.cpp
src/week07_custom_containers/: CMakeLists.txt  DenseSet.hpp  FixedVector.hpp  PagedVector.hpp  RingBuffer.hpp  SlotMap.hpp  main.cpp
src/week08_stl_allocator_integration/: CMakeLists.txt  FrameAllocator.hpp  FrameResource.hpp  Pool.hpp  PoolAllocator.hpp  PoolResource.hpp  main.cpp
src/week09_crtp/: CMakeLists.txt  Component.hpp  ComponentId.hpp  ComponentStorage.hpp  main.cpp
src/week10_templates_simd/: CMakeLists.txt  Mat4f.hpp  Mat4fOps.hpp  QuatOps.hpp  Quaternion.hpp  SimdExpr.hpp  Vec3f.hpp  Vec3fOps.hpp  VecExpr.hpp  (+2 more)
src/week14_lock_free_queues/: CMakeLists.txt  main.cpp
src/week14_lock_free_queues/assets/: AssetBase.hpp  AssetHandle.hpp  AssetLoader.hpp  AssetManager.hpp  AssetPipeline.cpp  AssetPipeline.hpp  TextAsset.hpp
src/week14_lock_free_queues/async/: LockFreeQueue.hpp  ThreadPool.cpp  ThreadPool.hpp
src/week14_lock_free_queues/files/: script.lua  shader.glsl
src/week18_memory_ecs_integration/: CMakeLists.txt  main.cpp
src/week18_memory_ecs_integration/memory/: AllocatorTagRegistry.hpp  ArenaVector.hpp  LinearAllocator.cpp  ThreadArenaRegistry.cpp  ThreadArenaRegistry.hpp
(+74 files in other folders)
